Traefik/traefik-demo/assess-uni-ingress 3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"  #可选，对该ingress启用tls
    nginx.ingress.kubernetes.io/client-body-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 4k
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  name: assess-uni
spec:
  rules:
  - host: pinggu.rencaiyoujia.com
    http:
      paths:
      - backend:
          serviceName: assess-uni
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pinggu.rencaiyoujia.com
    secretName: rencaiyoujia-tls-secret
